crates/pg_syntax/tests/snapshots/postgres_regress/union@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from (values (row(100::money)), (row(200::money))) _(x) union select x from (values (row(100::money)), (row(300::money))) _(x);"
---
SelectStmt@0..136
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..63
    ResTarget@7..8
      ColumnRef@7..8
        Ident@7..8 "x"
    Whitespace@8..9 " "
    From@9..13 "from"
    Whitespace@13..14 " "
    Ascii40@14..15 "("
    RangeSubselect@15..63
      SelectStmt@15..56
        Values@15..21 "values"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..37
          RowExpr@23..37
            Row@23..26 "row"
            Ascii40@26..27 "("
            TypeCast@27..37
              AConst@27..30
                Iconst@27..30 "100"
              Typecast@30..32 "::"
              TypeName@32..37
                Ident@32..37 "money"
        Ascii41@37..38 ")"
        Ascii41@38..39 ")"
        Ascii44@39..40 ","
        Whitespace@40..41 " "
        Ascii40@41..42 "("
        List@42..56
          RowExpr@42..56
            Row@42..45 "row"
            Ascii40@45..46 "("
            TypeCast@46..56
              AConst@46..49
                Iconst@46..49 "200"
              Typecast@49..51 "::"
              TypeName@51..56
                Ident@51..56 "money"
      Ascii41@56..57 ")"
      Ascii41@57..58 ")"
      Ascii41@58..59 ")"
      Whitespace@59..60 " "
      Alias@60..63
        Ident@60..61 "_"
        Ascii40@61..62 "("
        Ident@62..63 "x"
  Ascii41@63..64 ")"
  Whitespace@64..65 " "
  Union@65..70 "union"
  Whitespace@70..71 " "
  SelectStmt@71..134
    Select@71..77 "select"
    Whitespace@77..78 " "
    ResTarget@78..79
      ColumnRef@78..79
        Ident@78..79 "x"
    Whitespace@79..80 " "
    From@80..84 "from"
    Whitespace@84..85 " "
    Ascii40@85..86 "("
    RangeSubselect@86..134
      SelectStmt@86..127
        Values@86..92 "values"
        Whitespace@92..93 " "
        Ascii40@93..94 "("
        List@94..108
          RowExpr@94..108
            Row@94..97 "row"
            Ascii40@97..98 "("
            TypeCast@98..108
              AConst@98..101
                Iconst@98..101 "100"
              Typecast@101..103 "::"
              TypeName@103..108
                Ident@103..108 "money"
        Ascii41@108..109 ")"
        Ascii41@109..110 ")"
        Ascii44@110..111 ","
        Whitespace@111..112 " "
        Ascii40@112..113 "("
        List@113..127
          RowExpr@113..127
            Row@113..116 "row"
            Ascii40@116..117 "("
            TypeCast@117..127
              AConst@117..120
                Iconst@117..120 "300"
              Typecast@120..122 "::"
              TypeName@122..127
                Ident@122..127 "money"
      Ascii41@127..128 ")"
      Ascii41@128..129 ")"
      Ascii41@129..130 ")"
      Whitespace@130..131 " "
      Alias@131..134
        Ident@131..132 "_"
        Ascii40@132..133 "("
        Ident@133..134 "x"
  Ascii41@134..135 ")"
  Ascii59@135..136 ";"

