crates/pg_syntax/tests/snapshots/postgres_regress/union@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set enable_hashagg to off;
---
VariableSetStmt@0..26
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..18 "enable_hashagg"
  Whitespace@18..19 " "
  To@19..21 "to"
  Whitespace@21..22 " "
  AConst@22..25
    Off@22..25 "off"
  Ascii59@25..26 ";"

