crates/pg_syntax/tests/snapshots/postgres_regress/union@92.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from (values (row(1, 2)), (row(1, 3))) _(x) union select x from (values (row(1, 2)), (row(1, 4))) _(x);"
---
SelectStmt@0..112
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..51
    ResTarget@7..8
      ColumnRef@7..8
        Ident@7..8 "x"
    Whitespace@8..9 " "
    From@9..13 "from"
    Whitespace@13..14 " "
    Ascii40@14..15 "("
    RangeSubselect@15..51
      SelectStmt@15..44
        Values@15..21 "values"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..31
          RowExpr@23..31
            Row@23..26 "row"
            Ascii40@26..27 "("
            AConst@27..28
              Iconst@27..28 "1"
            Ascii44@28..29 ","
            Whitespace@29..30 " "
            AConst@30..31
              Iconst@30..31 "2"
        Ascii41@31..32 ")"
        Ascii41@32..33 ")"
        Ascii44@33..34 ","
        Whitespace@34..35 " "
        Ascii40@35..36 "("
        List@36..44
          RowExpr@36..44
            Row@36..39 "row"
            Ascii40@39..40 "("
            AConst@40..41
              Iconst@40..41 "1"
            Ascii44@41..42 ","
            Whitespace@42..43 " "
            AConst@43..44
              Iconst@43..44 "3"
      Ascii41@44..45 ")"
      Ascii41@45..46 ")"
      Ascii41@46..47 ")"
      Whitespace@47..48 " "
      Alias@48..51
        Ident@48..49 "_"
        Ascii40@49..50 "("
        Ident@50..51 "x"
  Ascii41@51..52 ")"
  Whitespace@52..53 " "
  Union@53..58 "union"
  Whitespace@58..59 " "
  SelectStmt@59..110
    Select@59..65 "select"
    Whitespace@65..66 " "
    ResTarget@66..67
      ColumnRef@66..67
        Ident@66..67 "x"
    Whitespace@67..68 " "
    From@68..72 "from"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    RangeSubselect@74..110
      SelectStmt@74..103
        Values@74..80 "values"
        Whitespace@80..81 " "
        Ascii40@81..82 "("
        List@82..90
          RowExpr@82..90
            Row@82..85 "row"
            Ascii40@85..86 "("
            AConst@86..87
              Iconst@86..87 "1"
            Ascii44@87..88 ","
            Whitespace@88..89 " "
            AConst@89..90
              Iconst@89..90 "2"
        Ascii41@90..91 ")"
        Ascii41@91..92 ")"
        Ascii44@92..93 ","
        Whitespace@93..94 " "
        Ascii40@94..95 "("
        List@95..103
          RowExpr@95..103
            Row@95..98 "row"
            Ascii40@98..99 "("
            AConst@99..100
              Iconst@99..100 "1"
            Ascii44@100..101 ","
            Whitespace@101..102 " "
            AConst@102..103
              Iconst@102..103 "4"
      Ascii41@103..104 ")"
      Ascii41@104..105 ")"
      Ascii41@105..106 ")"
      Whitespace@106..107 " "
      Alias@107..110
        Ident@107..108 "_"
        Ascii40@108..109 "("
        Ident@109..110 "x"
  Ascii41@110..111 ")"
  Ascii59@111..112 ";"

