crates/pg_syntax/tests/snapshots/postgres_regress/union@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT f1 FROM float8_tbl EXCEPT SELECT f1 FROM int4_tbl ORDER BY 1;
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..25
    ResTarget@7..9
      ColumnRef@7..9
        Ident@7..9 "f1"
    Whitespace@9..10 " "
    From@10..14 "FROM"
    Whitespace@14..15 " "
    RangeVar@15..25
      Ident@15..25 "float8_tbl"
  Whitespace@25..26 " "
  Except@26..32 "EXCEPT"
  Whitespace@32..33 " "
  SelectStmt@33..56
    Select@33..39 "SELECT"
    Whitespace@39..40 " "
    ResTarget@40..42
      ColumnRef@40..42
        Ident@40..42 "f1"
    Whitespace@42..43 " "
    From@43..47 "FROM"
    Whitespace@47..48 " "
    RangeVar@48..56
      Ident@48..56 "int4_tbl"
  Whitespace@56..57 " "
  SortBy@57..67
    Order@57..62 "ORDER"
    Whitespace@62..63 " "
    By@63..65 "BY"
    Whitespace@65..66 " "
    AConst@66..67
      Iconst@66..67 "1"
  Ascii59@67..68 ";"

