crates/pg_syntax/tests/snapshots/postgres_regress/uuid@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO guid1(guid_field) VALUES('3f3e3c3b3a3039383736353433a2313e');"
---
InsertStmt@0..73
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "guid1"
  Ascii40@17..18 "("
  ResTarget@18..28
    Ident@18..28 "guid_field"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..71
    Values@30..36 "VALUES"
    Ascii40@36..37 "("
    List@37..71
      AConst@37..71
        Sconst@37..71 "'3f3e3c3b3a3039383736 ..."
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

