crates/pg_syntax/tests/snapshots/postgres_regress/uuid@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT guid_field FROM guid1 ORDER BY guid_field DESC;
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    ColumnRef@7..17
      Ident@7..17 "guid_field"
  Whitespace@17..18 " "
  From@18..22 "FROM"
  Whitespace@22..23 " "
  RangeVar@23..28
    Ident@23..28 "guid1"
  Whitespace@28..29 " "
  SortBy@29..53
    Order@29..34 "ORDER"
    Whitespace@34..35 " "
    By@35..37 "BY"
    Whitespace@37..38 " "
    ColumnRef@38..48
      Ident@38..48 "guid_field"
    Whitespace@48..49 " "
    Desc@49..53 "DESC"
  Ascii59@53..54 ";"

